fix: Change swagger /health response model to a string
